Edit the Recommendations section

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -384,7 +384,7 @@
         <!-- New releases Section -->
         <div class="new-releases-section">
           <div class="new-releases-title-box">
-            <h3 class="new-releases-title no-margin">New Releases</h3>
+            <h3 class="no-margin">New Releases</h3>
 
             <img
               class="options-button"
@@ -756,9 +756,9 @@
           </div>
         </div>
 
-        <div class="rpc-section">
-          <div class="rpc-title-box">
-            <div class="rpc-title no-margin">
+        <div class="recommendations-section">
+          <div class="recommendations-title-box">
+            <div class="recommendations-title no-margin">
               <p class="no-margin">Recommendations</p>
             </div>
 
@@ -776,130 +776,116 @@
             </div>
           </div>
 
-          <ul class="rpc-list">
-            <li class="rpc-box">
+          <ul class="recommendations-list">
+            <li class="recommendations-box">
               <img
-                class="rpc-cover"
+                class="recs-circle-cover"
                 src="/assets/images/png/структура-щастя_playlist.png"
                 alt="структура-щастя_playlist"
               />
 
-              <p class="rpc-playlist-title playlist-title no-margin">
-                СТРУКТУРА ЩАСТЯ
-              </p>
+              <p class="recs-artist-title no-margin">СТРУКТУРА ЩАСТЯ</p>
 
-              <p class="rpc-author-box author-playlist no-margin">
-                aksond1&nbsp; • &nbsp;29 songs
+              <p class="recs-artist-box author-playlist no-margin">
+                Artist&nbsp; • &nbsp;119.3K followers
               </p>
             </li>
 
-            <li class="rpc-box">
+            <li class="recommendations-box">
               <img
-                class="rpc-cover"
+                class="recs-square-cover"
                 src="/assets/images/png/melody_playlist.png"
                 alt="melody_playlist"
               />
 
-              <p class="rpc-playlist-title playlist-title no-margin">Melody</p>
+              <p class="recs-artist-title no-margin">Don't Stop Me Now</p>
 
-              <p class="rpc-author-box author-playlist no-margin">
-                aksond1&nbsp; • &nbsp;45 songs
+              <p class="recs-artist-box author-playlist no-margin">
+                Song&nbsp; • &nbsp;2.5B streams
               </p>
             </li>
 
-            <li class="rpc-box">
+            <li class="recommendations-box">
               <img
-                class="rpc-cover"
+                class="recs-square-cover"
                 src="/assets/images/png/ЦЙШЩНР_playlist.png"
                 alt="ЦЙШЩНР_playlist"
               />
 
-              <p class="rpc-playlist-title playlist-title no-margin">
-                ЙЦШЩНРШКРЙЩША
-              </p>
+              <p class="recs-artist-title no-margin">ЙЦШЩНРШКРЙЩША</p>
 
-              <p class="rpc-author-box author-playlist no-margin">
-                aksond1&nbsp; • &nbsp;25 songs
+              <p class="recs-artist-box author-playlist no-margin">
+                Playlist&nbsp; • &nbsp;27 songs
               </p>
             </li>
 
-            <li class="rpc-box">
+            <li class="recommendations-box">
               <img
-                class="rpc-cover"
+                class="recs-square-cover"
                 src="/assets/images/png/all-out-2010s_playlist.png"
                 alt="all-out-2010s_playlist"
               />
 
-              <p class="rpc-playlist-title playlist-title no-margin">
-                All Out 2010s
-              </p>
+              <p class="recs-artist-title no-margin">Doo-Wops & Hooligans</p>
 
-              <p class="rpc-author-box author-playlist no-margin">
-                aksond1&nbsp; • &nbsp;208 songs
+              <p class="recs-artist-box author-playlist no-margin">
+                Album&nbsp; • &nbsp;Bruno Mars
               </p>
             </li>
 
-            <li class="rpc-box">
+            <li class="recommendations-box">
               <img
-                class="rpc-cover"
-                src="/assets/images/png/пігулки_playlist.png"
-                alt="пігулки_playlist"
+                class="recs-circle-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
               />
 
-              <p class="rpc-playlist-title playlist-title no-margin">
-                Пігулки від голови
-              </p>
+              <p class="recs-artist-title no-margin">СТРУКТУРА ЩАСТЯ</p>
 
-              <p class="rpc-author-box author-playlist no-margin">
-                aksond1&nbsp; • &nbsp;25 songs
+              <p class="recs-artist-box author-playlist no-margin">
+                Artist&nbsp; • &nbsp;119.3K followers
               </p>
             </li>
 
-            <li class="rpc-box">
+            <li class="recommendations-box">
               <img
-                class="rpc-cover"
-                src="/assets/images/png/постпанк_playlist.png"
-                alt="постпанк_playlist"
+                class="recs-square-cover"
+                src="/assets/images/png/melody_playlist.png"
+                alt="melody_playlist"
               />
 
-              <p class="rpc-playlist-title playlist-title no-margin">
-                Пост-Панк
-              </p>
+              <p class="recs-artist-title no-margin">Don't Stop Me Now</p>
 
-              <p class="rpc-author-box author-playlist no-margin">
-                aksond1&nbsp; • &nbsp;66 songs
+              <p class="recs-artist-box author-playlist no-margin">
+                Song&nbsp; • &nbsp;2.5B streams
               </p>
             </li>
 
-            <li class="rpc-box">
+            <li class="recommendations-box">
               <img
-                class="rpc-cover"
-                src="/assets/images/png/emo rap_playlist.png"
-                alt="emo rap_playlist"
+                class="recs-square-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
               />
 
-              <p class="rpc-playlist-title playlist-title no-margin">
-                emo rap (temp playlist)
-              </p>
+              <p class="recs-artist-title no-margin">ЙЦШЩНРШКРЙЩША</p>
 
-              <p class="rpc-author-box author-playlist no-margin">
-                aksond1&nbsp; • &nbsp;14 songs
+              <p class="recs-artist-box author-playlist no-margin">
+                Playlist&nbsp; • &nbsp;27 songs
               </p>
             </li>
 
-            <li class="rpc-box">
+            <li class="recommendations-box">
               <img
-                class="rpc-cover"
-                src="/assets/images/png/eyedress_playlist.png"
-                alt="eyedress_playlist"
+                class="recs-square-cover"
+                src="/assets/images/png/all-out-2010s_playlist.png"
+                alt="all-out-2010s_playlist"
               />
 
-              <p class="rpc-playlist-title playlist-title no-margin">
-                Eyedress
-              </p>
+              <p class="recs-artist-title no-margin">Doo-Wops & Hooligans</p>
 
-              <p class="rpc-author-box author-playlist no-margin">
-                aksond1&nbsp; • &nbsp;20 songs
+              <p class="recs-artist-box author-playlist no-margin">
+                Album&nbsp; • &nbsp;Bruno Mars
               </p>
             </li>
           </ul>
@@ -915,9 +901,139 @@
           </div>
         </div>
 
-        <div class="playlists-section">
-          <p class="playlists-title-box no-margin">Similar to [artist]</p>
-          <div class="playlists-container">content</div>
+        <div class="recommendations-section">
+          <div class="recommendations-title-box">
+            <div class="recommendations-title no-margin">
+              <p class="no-margin">Similar to [artist]</p>
+            </div>
+
+            <div class="turn-pages-buttons">
+              <img
+                class="previous-button"
+                src="/assets/images/svg/previous-button.svg"
+                alt="previous-button"
+              />
+              <img
+                class="next-button"
+                src="/assets/images/svg/next-button.svg"
+                alt="next-button"
+              />
+            </div>
+          </div>
+
+          <ul class="recommendations-list">
+            <li class="recommendations-box">
+              <img
+                class="recs-circle-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">СТРУКТУРА ЩАСТЯ</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Artist&nbsp; • &nbsp;119.3K followers
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-circle-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">СТРУКТУРА ЩАСТЯ</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Artist&nbsp; • &nbsp;119.3K followers
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-circle-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">СТРУКТУРА ЩАСТЯ</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Artist&nbsp; • &nbsp;119.3K followers
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-circle-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">СТРУКТУРА ЩАСТЯ</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Artist&nbsp; • &nbsp;119.3K followers
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-circle-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">СТРУКТУРА ЩАСТЯ</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Artist&nbsp; • &nbsp;119.3K followers
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-circle-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">СТРУКТУРА ЩАСТЯ</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Artist&nbsp; • &nbsp;119.3K followers
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-circle-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">СТРУКТУРА ЩАСТЯ</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Artist&nbsp; • &nbsp;119.3K followers
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-circle-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">СТРУКТУРА ЩАСТЯ</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Artist&nbsp; • &nbsp;119.3K followers
+              </p>
+            </li>
+          </ul>
         </div>
 
         <div class="playlists-section">
