Change the New Releases section a bit

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -403,7 +403,7 @@
               <div class="new-release-infobox">
                 <div class="new-release-title-box">
                   <p class="song-title no-margin">
-                    я (не) врятую тебе від самотності
+                    я (не) врятую тебе від <br />самотності
                   </p>
                 </div>
 
@@ -442,7 +442,7 @@
                     alt="new-release-author-icon"
                   />
                   <div class="author-infobox">
-                    <p class="no-margin">СТРУКТУРА ...</p>
+                    <p class="no-margin">СТРУКТУРА ЩАСТЯ</p>
                     <p class="new-release-author-info no-margin">
                       118.4K followers
                     </p>
@@ -534,8 +534,6 @@
                 </div>
               </div>
             </li>
-
-            <li class="new-releases-scroll-buttons">unknown area</li>
           </ul>
         </div>
 
