Edit the Most Listened Artists section
Just add the concept of how it should looks

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -889,14 +889,35 @@
           </ul>
         </div>
 
-        <div class="playlists-section">
-          <p class="playlists-title-box no-margin">Most Listened Artists</p>
-          <div class="items-container">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
+        <div class="mla-section">
+          <div class="mla-title-box no-margin">
+            <div class="mla-title">Most Listened Artists</div>
+            <div class="turn-pages-buttons">
+              <img
+                class="previous-button"
+                src="/assets/images/svg/previous-button.svg"
+                alt="previous-button"
+              />
+              <img
+                class="next-button"
+                src="/assets/images/svg/next-button.svg"
+                alt="next-button"
+              />
+            </div>
           </div>
+          <ul class="mla-list">
+            <li class="mla-card">
+              <div class="mla-artist"></div>
+              <ul class="mla-songs-list">
+                <li class="mla-song"></li>
+                <li class="mla-song"></li>
+                <li class="mla-song"></li>
+              </ul>
+            </li>
+            <li class="mla-card"></li>
+            <li class="mla-card"></li>
+            <li class="mla-card"></li>
+          </ul>
         </div>
 
         <div class="recommendations-section">
