Minor changes in the Relative-to section

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -923,21 +923,16 @@
         <div class="recommendations-section">
           <div class="recommendations-title-box">
             <div class="recommendations-title no-margin">
-              <p class="no-margin">Similar to [artist]</p>
+              <p class="no-margin">
+                Relative to <span class="yellow">Copycat</span>
+              </p>
             </div>
 
-            <div class="turn-pages-buttons">
-              <img
-                class="previous-button"
-                src="/assets/images/svg/previous-button.svg"
-                alt="previous-button"
-              />
-              <img
-                class="next-button"
-                src="/assets/images/svg/next-button.svg"
-                alt="next-button"
-              />
-            </div>
+            <h3 class="no-margin">
+              <span class="closed-category-title gray">Playlists</span>
+              &nbsp;Artists&nbsp;
+              <span class="closed-category-title gray">Songs</span>
+            </h3>
           </div>
 
           <ul class="recommendations-list">
