--- a/source/html/index.html
+++ b/source/html/index.html
@@ -889,6 +889,26 @@
           </ul>
         </div>
 
+        <div class="recommendations-section">
+          <div class="recommendations-title-box">
+            <div class="recommendations-title no-margin">
+              <p class="no-margin">Trends</p>
+            </div>
+
+            <div class="turn-pages-buttons"></div>
+          </div>
+        </div>
+
+        <div class="recommendations-section">
+          <div class="recommendations-title-box">
+            <div class="recommendations-title no-margin">
+              <p class="no-margin">Reflection of You</p>
+            </div>
+
+            <div class="turn-pages-buttons"></div>
+          </div>
+        </div>
+
         <div class="mla-section">
           <div class="mla-title-box no-margin">
             <div class="mla-title">Most Listened Artists</div>
