--- a/source/html/index.html
+++ b/source/html/index.html
@@ -902,7 +902,7 @@
         <div class="recommendations-section">
           <div class="recommendations-title-box">
             <div class="recommendations-title no-margin">
-              <p class="no-margin">Reflection of You</p>
+              <p class="no-margin">Library</p>
             </div>
 
             <div class="turn-pages-buttons"></div>
@@ -944,7 +944,7 @@
           <div class="recommendations-title-box">
             <div class="recommendations-title no-margin">
               <p class="no-margin">
-                Relative to <span class="yellow">Copycat</span>
+                Related to <span class="yellow">Copycat</span>
               </p>
             </div>
 
