Change the New Releases Section and add content to the Rock Section
I finally made smth similar that I would like to saw in the New Releases section. There are still so many things to add, but I
just glad that I finally can see a vision.

Also, I've added some content for the Rock New Releases section, looks nice, especially the scroll line and slider idk.

My English is so fucking bad i guess/

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -516,7 +516,7 @@
 
               <div class="new-release-infobox">
                 <div class="new-release-title-box">
-                  <p class="song-title no-margin">це не сильно радикально?</p>
+                  <p class="song-title no-margin">це не сильно ...</p>
                 </div>
 
                 <div class="new-release-author-box">
@@ -533,6 +533,48 @@
                   </div>
                 </div>
               </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/jpg/song-cover.jpeg"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-infobox">
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Сидативи</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <img
+                    class="new-release-author-icon"
+                    src="/assets/images/jpg/author-icon.jpeg"
+                    alt="new-release-author-icon"
+                  />
+                  <div class="author-infobox">
+                    <p class="no-margin">СТРУКТ</p>
+                    <p class="new-release-author-info no-margin">
+                      118.4K follow
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-releases-scroll-btns">
+              <img
+                class="next-circle"
+                src="/assets/images/svg/next-circle.svg"
+                alt="next-button"
+              />
+
+              <img
+                class="previous-circle"
+                src="/assets/images/svg/previous-circle.svg"
+                alt="previous-button"
+              />
             </li>
           </ul>
         </div>
@@ -747,7 +789,182 @@
               recommended songs ( scroll area with songs)
             </div>
             <div class="rock-rpa">
-              <div class="rock-new-releases">new releases</div>
+              <div class="rock-new-releases">
+                <div class="rock-nr-section">
+                  <div class="rock-nr-title-box">
+                    <h4 class="no-margin">Latest Releases</h4>
+
+                    <img
+                      class="options-button"
+                      src="/assets/images/svg/3dots-vertical.svg"
+                      alt="options"
+                    />
+                  </div>
+                  <ul class="rock-nr-list no-margin">
+                    <li class="rock-nr-box">
+                      <img
+                        class="rock-nr-cover"
+                        src="/assets/images/png/я (не) врятую тебе від самотності.png"
+                        alt="song-cover-8"
+                      />
+
+                      <div class="rock-nr-infobox">
+                        <div class="rock-nr-title-box">
+                          <p class="song-title no-margin">
+                            я (не) врятую тебе від самотності
+                          </p>
+                        </div>
+
+                        <div class="rock-nr-author-box">
+                          <img
+                            class="rock-nr-author-icon"
+                            src="/assets/images/png/апатія.png"
+                            alt="new-release-author-icon"
+                          />
+                          <div class="author-infobox">
+                            <p class="rock-nr-author-nickname no-margin">
+                              Апатія
+                            </p>
+                            <p class="rock-nr-author-info no-margin">
+                              114.3K followers
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="rock-nr-box">
+                      <img
+                        class="rock-nr-cover"
+                        src="/assets/images/png/я (не) врятую тебе від самотності.png"
+                        alt="song-cover-8"
+                      />
+
+                      <div class="rock-nr-infobox">
+                        <div class="rock-nr-title-box">
+                          <p class="song-title no-margin">
+                            я (не) врятую тебе від самотності
+                          </p>
+                        </div>
+
+                        <div class="rock-nr-author-box">
+                          <img
+                            class="rock-nr-author-icon"
+                            src="/assets/images/png/апатія.png"
+                            alt="new-release-author-icon"
+                          />
+                          <div class="author-infobox">
+                            <p class="rock-nr-author-nickname no-margin">
+                              Апатія
+                            </p>
+                            <p class="rock-nr-author-info no-margin">
+                              114.3K followers
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="rock-nr-box">
+                      <img
+                        class="rock-nr-cover"
+                        src="/assets/images/png/я (не) врятую тебе від самотності.png"
+                        alt="song-cover-8"
+                      />
+
+                      <div class="rock-nr-infobox">
+                        <div class="rock-nr-title-box">
+                          <p class="song-title no-margin">
+                            я (не) врятую тебе від самотності
+                          </p>
+                        </div>
+
+                        <div class="rock-nr-author-box">
+                          <img
+                            class="rock-nr-author-icon"
+                            src="/assets/images/png/апатія.png"
+                            alt="new-release-author-icon"
+                          />
+                          <div class="author-infobox">
+                            <p class="rock-nr-author-nickname no-margin">
+                              Апатія
+                            </p>
+                            <p class="rock-nr-author-info no-margin">
+                              114.3K followers
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="rock-nr-box">
+                      <img
+                        class="rock-nr-cover"
+                        src="/assets/images/png/я (не) врятую тебе від самотності.png"
+                        alt="song-cover-8"
+                      />
+
+                      <div class="rock-nr-infobox">
+                        <div class="rock-nr-title-box">
+                          <p class="song-title no-margin">
+                            я (не) врятую тебе від самотності
+                          </p>
+                        </div>
+
+                        <div class="rock-nr-author-box">
+                          <img
+                            class="rock-nr-author-icon"
+                            src="/assets/images/png/апатія.png"
+                            alt="new-release-author-icon"
+                          />
+                          <div class="author-infobox">
+                            <p class="rock-nr-author-nickname no-margin">
+                              Апатія
+                            </p>
+                            <p class="rock-nr-author-info no-margin">
+                              114.3K followers
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="rock-nr-box">
+                      <img
+                        class="rock-nr-cover"
+                        src="/assets/images/png/я (не) врятую тебе від самотності.png"
+                        alt="song-cover-8"
+                      />
+
+                      <div class="rock-nr-infobox">
+                        <div class="rock-nr-title-box">
+                          <p class="song-title no-margin">
+                            я (не) врятую тебе від самотності
+                          </p>
+                        </div>
+
+                        <div class="rock-nr-author-box">
+                          <img
+                            class="rock-nr-author-icon"
+                            src="/assets/images/png/апатія.png"
+                            alt="new-release-author-icon"
+                          />
+                          <div class="author-infobox">
+                            <p class="rock-nr-author-nickname no-margin">
+                              Апатія
+                            </p>
+                            <p class="rock-nr-author-info no-margin">
+                              114.3K followers
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+
+                  <div class="line"></div>
+                </div>
+              </div>
               <div class="rock-playlists">playlists</div>
               <div class="rock-artists">artists</div>
             </div>
