Modify the Rock section
I just added some examples of how playlist and artist sections should look there.
Look not so bad for now tbh.

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -965,8 +965,256 @@
                   <div class="line"></div>
                 </div>
               </div>
-              <div class="rock-playlists">playlists</div>
-              <div class="rock-artists">artists</div>
+              <div class="rock-playlists">
+                <div class="rock-plts-section">
+                  <div class="rock-nr-title-box">
+                    <h4 class="no-margin">Most Popular Playlists</h4>
+
+                    <img
+                      class="options-button"
+                      src="/assets/images/svg/3dots-vertical.svg"
+                      alt="options"
+                    />
+                  </div>
+
+                  <ul class="rock-plts-list">
+                    <li class="rock-plt-box">
+                      <img
+                        class="rock-plt-cover"
+                        src="/assets/images/png/rock-cover.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-plt-title playlist-title no-margin">
+                        Hard Rock/Metal
+                      </p>
+                    </li>
+
+                    <li class="rock-plt-box">
+                      <img
+                        class="rock-plt-cover"
+                        src="/assets/images/png/rock-cover-2.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-plt-title playlist-title no-margin">
+                        Rock - 2000s
+                      </p>
+                    </li>
+
+                    <li class="rock-plt-box">
+                      <img
+                        class="rock-plt-cover"
+                        src="/assets/images/png/rock-cover.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-plt-title playlist-title no-margin">
+                        Hard Rock/Metal
+                      </p>
+                    </li>
+
+                    <li class="rock-plt-box">
+                      <img
+                        class="rock-plt-cover"
+                        src="/assets/images/png/rock-cover-2.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-plt-title playlist-title no-margin">
+                        Rock - 2000s
+                      </p>
+                    </li>
+
+                    <li class="rock-plt-box">
+                      <img
+                        class="rock-plt-cover"
+                        src="/assets/images/png/rock-cover.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-plt-title playlist-title no-margin">
+                        Hard Rock/Metal
+                      </p>
+                    </li>
+
+                    <li class="rock-plt-box">
+                      <img
+                        class="rock-plt-cover"
+                        src="/assets/images/png/rock-cover-2.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-plt-title playlist-title no-margin">
+                        Rock - 2000s
+                      </p>
+                    </li>
+
+                    <li class="rock-plt-box">
+                      <img
+                        class="rock-plt-cover"
+                        src="/assets/images/png/rock-cover.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-plt-title playlist-title no-margin">
+                        Hard Rock/Metal
+                      </p>
+                    </li>
+
+                    <li class="rock-plt-box">
+                      <img
+                        class="rock-plt-cover"
+                        src="/assets/images/png/rock-cover-2.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-plt-title playlist-title no-margin">
+                        Rock - 2000s
+                      </p>
+                    </li>
+
+                    <li class="rock-plt-box">
+                      <img
+                        class="rock-plt-cover"
+                        src="/assets/images/png/rock-cover.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-plt-title playlist-title no-margin">
+                        Hard Rock/Metal
+                      </p>
+                    </li>
+                  </ul>
+
+                  <div class="line"></div>
+                </div>
+              </div>
+              <div class="rock-artists">
+                <div class="rock-plts-section">
+                  <div class="rock-nr-title-box">
+                    <h4 class="no-margin">Most Popular Artists</h4>
+
+                    <img
+                      class="options-button"
+                      src="/assets/images/svg/3dots-vertical.svg"
+                      alt="options"
+                    />
+                  </div>
+
+                  <ul class="rock-plts-list">
+                    <li class="rock-artist-box">
+                      <img
+                        class="rock-artist-cover"
+                        src="/assets/images/png/хейтспіч.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-artist-title playlist-title no-margin">
+                        Хейтспіч
+                      </p>
+                    </li>
+
+                    <li class="rock-artist-box">
+                      <img
+                        class="rock-artist-cover"
+                        src="/assets/images/png/хейтспіч.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-artist-title playlist-title no-margin">
+                        Хейтспіч
+                      </p>
+                    </li>
+
+                    <li class="rock-artist-box">
+                      <img
+                        class="rock-artist-cover"
+                        src="/assets/images/png/хейтспіч.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-artist-title playlist-title no-margin">
+                        Хейтспіч
+                      </p>
+                    </li>
+
+                    <li class="rock-artist-box">
+                      <img
+                        class="rock-artist-cover"
+                        src="/assets/images/png/хейтспіч.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-artist-title playlist-title no-margin">
+                        Хейтспіч
+                      </p>
+                    </li>
+
+                    <li class="rock-artist-box">
+                      <img
+                        class="rock-artist-cover"
+                        src="/assets/images/png/хейтспіч.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-artist-title playlist-title no-margin">
+                        Хейтспіч
+                      </p>
+                    </li>
+
+                    <li class="rock-artist-box">
+                      <img
+                        class="rock-artist-cover"
+                        src="/assets/images/png/хейтспіч.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-artist-title playlist-title no-margin">
+                        Хейтспіч
+                      </p>
+                    </li>
+
+                    <li class="rock-artist-box">
+                      <img
+                        class="rock-artist-cover"
+                        src="/assets/images/png/хейтспіч.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-artist-title playlist-title no-margin">
+                        Хейтспіч
+                      </p>
+                    </li>
+
+                    <li class="rock-artist-box">
+                      <img
+                        class="rock-artist-cover"
+                        src="/assets/images/png/хейтспіч.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-artist-title playlist-title no-margin">
+                        Хейтспіч
+                      </p>
+                    </li>
+
+                    <li class="rock-artist-box">
+                      <img
+                        class="rock-artist-cover"
+                        src="/assets/images/png/хейтспіч.png"
+                        alt="структура-щастя_playlist"
+                      />
+
+                      <p class="rock-artist-title playlist-title no-margin">
+                        Хейтспіч
+                      </p>
+                    </li>
+                  </ul>
+
+                  <div class="line"></div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
